repair index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>LISTA</title>
-  <link rel="stylesheet" href="theme.css">
   <script src="https://code.jquery.com/jquery.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>  
-  <script src="script.js"></script>
 </head>
 <body>
   <div class="container">
@@ -49,6 +48,6 @@
       </div>
     </div>
   </div>
-  
+<script src="script.js"></script>
 </body>
 </html>
